style(issue): fix username and gist table overflow

--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -1,6 +1,7 @@
 .gists {
   width: 85%;
   margin-top: 20px;
+  overflow: scroll;
 }
 .gist-header {
   display: flex;
